typescript/checker/tests/conformance/es6/Symbols/symbolProperty7.ts.stderr
error: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty7.ts:3:5
  |
3 |     [Symbol()] = 0;
  |     ^^^^^^^^^^^^^^^

error: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty7.ts:4:5
  |
4 |     [Symbol()]: number;
  |     ^^^^^^^^^^^^^^^^^^^

